minor BE changes to allow cookies and change password FE WIP